--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: Abraham Musa
+title: Aidana Utepkaliyeva
 description: Jekyll Theme Minimal Resume
 # baseurl: "" # the subpath of your site, e.g. /blog
-url: https://abraham-musa.github.io/abraham-musa/
+url: https://github.com/aidanautep90/Team_Works.git
 
 # User settings
-username: Abraham Musa
+username: Aidana Utepkaliyeva
 user_description: I\'m a nomad Software Engineer, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in the <b>crypto-world</b> working for Radix, a London based startup trying to create the next massive scalable DLT. I'm one of the two guys behind all the JS related stuff.
 user_title: Cloud Engineer & Architect
-email: abraham.musa@gmail.com
-twitter_username: abraham-musa
-github_username:  abraham-musa
+email: aidanautep90@gmail.com
+twitter_username: dont have one
+github_username:  aidanautep90
 # gplus_username:  lorem_ipsum
 
 exclude: ['package.json', 'src' , 'node_modules']
